--- a/serverless_project/serverless.yml
+++ b/serverless_project/serverless.yml
@@ -23,5 +23,5 @@ plugins:
   - serverless-kubeless
 
 functions:
-  capitalize:
-    handler: handler.capitalize
+  contact:
+    handler: handler.contact
